from parent import Parent


class Peter(Parent):
    def __init__(self, grow):
        super().__init__(grow)
